--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,122 +1,103 @@
-version 2.1
+version: 2.1
 
-jobs
-  build-frontend
-    docker
-      - image circlecinode13.8.0
-    steps
+jobs:
+  build-frontend:
+    docker:
+      - image: circlecinode13.8.0
+    steps:
       - checkout
-      - restore_cache
-          keys [frontend-build]
-      - run
-          name Build front-end
-          command 
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Build front-end
+          command: | 
             cd frontend
             npm install
             npm run build
-      - save_cache
-          paths [frontendnode_modules]
-          key frontend-build
+      - save_cache:
+          paths: [frontendnode_modules]
+          key: frontend-build
 
-  build-backend
-    docker
-      - image circlecinode13.8.0
-    steps
+  build-backend:
+    docker:
+      - image: circlecinode13.8.0
+    steps:
       - checkout
-      - restore_cache
-          keys [backend-build]
-      - run
-          name Back-end build
-          command 
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Back-end build
+          command: | 
             cd backend
             npm install
             npm run build
-      - save_cache
-          paths [backendnode_modules]
-          key backend-build
-  test-frontend
-    docker
-      - image circlecinode13.8.0
-    steps
+      - save_cache:
+          paths: [backendnode_modules]
+          key: backend-build
+  test-frontend:
+    docker:
+      - image: circlecinode13.8.0
+    steps:
       - checkout
-      - restore_cache
-          keys [frontend-test]
-      - run
-          name Front-end test
-          command 
+      - restore_cache:
+          keys: [frontend-test]
+      - run:
+          name: Front-end test
+          command: |
             cd frontend
             npm install
             npm run test
-  test-backend
-    docker
-      - image circlecinode13.8.0
-    steps
+  test-backend:
+    docker:
+      - image: circlecinode13.8.0
+    steps:
       - checkout
-      - restore_cache
-          keys [backend-test]
-      - run
-          name Back-end test
-          command 
+      - restore_cache:
+          keys: [backend-test]
+      - run:
+          name: Back-end test
+          command : |
             cd backend
             npm install
             npm run test
-  scan-frontend
-    docker
-      - image circlecinode13.8.0
-    steps
+  scan-frontend:
+    docker:
+      - image: circlecinode13.8.0
+    steps:
       - checkout
-      - restore_cache
-          keys [frontend-scan]
-      - run 
-          name Front-end scan
-          command 
+      - restore_cache:
+          keys: [frontend-scan]
+      - run: 
+          name: Front-end scan
+          command: | 
             cd frontend
             npm install
             npm audit
 
-  scan-backend
-    docker
-      - image circlecinode13.8.0
-    steps
+  scan-backend:
+    docker:
+      - image: circlecinode13.8.0
+    steps:
       - checkout
-      - restore_cache
-          keys [backend-scan]
-      - run 
-          name Front-end scan
-          command 
+      - restore_cache:
+          keys: [backend-scan]
+      - run:
+          name: Front-end scan
+          command: | 
             cd backend
             npm install
             npm audit
 
-workflows
-  default
-    jobs
+workflows:
+  default:
+    jobs:
       - build-frontend
       - build-backend
-      - test-frontend
-          requires [build-frontend]
-      - test-backend
-          requires [build-backend]
-      - scan-backend
-          requires [build-backend]
-      - scan-frontend
-          requires [build-frontend]
-      # - deploy-infrastructure
-      #     requires [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters
-      #       branches
-      #         only [test-feature-branch]
-      # - configure-infrastructure
-      #     requires [deploy-infrastructure]
-      # - run-migrations
-      #     requires [configure-infrastructure]
-      # - deploy-frontend
-      #     requires [run-migrations]
-      # - deploy-backend
-      #     requires [run-migrations]
-      # - smoke-test
-      #     requires [deploy-backend, deploy-frontend]
-      # - cloudfront-update
-      #     requires [smoke-test]
-      # - cleanup
-      #     requires [cloudfront-update]
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
