--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,8 @@ jobs:
           command: | 
             cd frontend
             npm install
-            npm audit
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -86,7 +87,8 @@ jobs:
           command: | 
             cd backend
             npm install
-            npm audit
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
 
 workflows:
   default:
