--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,19 @@
 version: 2.1
 
+commands:
+  destroy-environment:
+    description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
+    parameters:
+      workflow_id:
+        type: string
+    steps:
+      - run:
+          name: Destroy environments
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name udapeople-backend-<< parameters.workflow_id >>
+            aws cloudformation delete-stack --stack-name udapeople-frontend-<< parameters.workflow_id >>
+
 jobs:
   build-frontend:
     docker:
@@ -92,6 +106,48 @@ jobs:
             npm audit fix
             npm audit --audit-level=critical
 
+  deploy-infrastructure:
+  docker:
+    - image: amazon/aws-cli:latest
+  steps:
+    - checkout
+    - restore_cache:
+        keys: [deploy-infrastructure]
+    - run: 
+        name: Install tar and gzip
+        command: |
+          sudo apt-get update
+          sudo apt-get install tar gzip -y
+    - run:
+        name: Ensure back-end infrastructure exists
+        command: |
+          aws cloudformation deploy \
+            --template-file .circleci/files/backend.yml \
+            --tags project=udapeople-shine \
+            --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+    - run:
+        name: Ensure front-end infrastructure exist
+        command: |
+          aws cloudformation deploy \
+            --template-file .circleci/files/frontend.yml \
+            --tags project=udapeople-shine \
+            --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" 
+    - run:
+        name: Add back-end ip to ansible inventory
+        command: |
+          aws cloudformation describe-stacks \
+            --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --query "Stacks[0].Outputs[0].OutputValue" \
+            --output text >> project/.circleci/ansible/inventory.txt
+    - persist_to_workspace:
+        root: ~/
+        paths:
+          - project/.circleci/ansible/inventory.txt
+    - destroy-environment:
+        workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+
 workflows:
   default:
     jobs:
@@ -105,3 +161,8 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
+      - deploy-infrastructure:
+          requires: [test-backend, test-frontend, scan-backend, scan-frontend]
+          filters:
+            branches:
+              only: master
