add deploy infra

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
 
   deploy-infrastructure:
   docker:
-    - image: amazon/aws-cli
+    - image: amazon/aws-cli:latest
   steps:
     - checkout
     - restore_cache:
