--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,8 +138,8 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # - destroy-environment:
-      #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}' 
+      - destroy-environment:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}' 
 
 workflows:
   default:
