--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,7 @@ jobs:
             aws cloudformation describe-stacks \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query "Stacks[0].Outputs[0].OutputValue" \
-              --output text >> project/.circleci/ansible/inventory.txt
+              --output text >> ./.circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
