--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: ansible/ansible:ubuntu1604
+      - image: python:3.9.16-alpine3.17
     steps:
       - checkout
       - add_ssh_keys:
