--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: python:3.9.16-alpine3.17
+      - image: ubuntu:latest
     steps:
       - checkout
       - add_ssh_keys:
@@ -164,6 +164,8 @@ jobs:
           command: |
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
+      - destroy-environment:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'  
       
 workflows:
   default:
