--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,7 +158,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apt-get install -y tar gzip awscli ansible
+            sudo apt-get install -y tar gzip awscli ansible
       - run:
           name: Configure server
           command: |
