--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,7 +147,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: ubuntu:latest
+      - image: python:3.9.16-alpine3.17
     steps:
       - checkout
       - add_ssh_keys:
@@ -158,7 +158,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt-get install -y tar gzip awscli ansible
+            apk add --update curl tar gzip ansible
+            pip install awscli
       - run:
           name: Configure server
           command: |
