--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -12,6 +12,12 @@
 - name: "install dependencies."
   become: true
   apt: 
-    name: ["nodejs", "npm", "pm2"]
+    name: ["nodejs", "npm"]
     state: latest
     update_cache: yes
+
+- name: "install pm2."
+  become: true
+  npm:
+    name: pm2
+    global: yes
