--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,8 +166,31 @@ jobs:
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment:
-          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'  
-      
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}' 
+  run-migrations:
+    docker:
+      - image: node:lts-alpine
+    steps:
+      - checkout
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migration-dump.txt
+      - run:
+          name: Send migration results to kvdb.io
+          command: |
+            if grep -q "has been executed successfully" ./backend/migration-dump.txt
+            then
+              curl https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/migration_${CIRCLE_WORKFLOW_ID:0:7} \
+              -d "1"
+            else
+              curl https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/migration_${CIRCLE_WORKFLOW_ID:0:7} \
+              -d "0"
+            fi
+      - destroy-environment:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
 workflows:
   default:
     jobs:
