--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,3 +211,5 @@ workflows:
               only: master
       - configure-infrastructure:
           requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
