--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,12 +215,15 @@ jobs:
           workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
   deploy-frontend:
     docker: 
-      - image: amazon/aws-cli:latest
+      - image: doctrine/nodejs-aws-cli:latest
     steps:
       - checkout
       - restore_cache:
           keys: [frontend-build]
-      - dependencies
+      - run:
+          name: Install tar and gzip
+          command: |
+            apt-get install -y tar gzip
       - run:
           name: Get backend url
           command: |
