--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -193,7 +193,7 @@ jobs:
       - run:
           name: Install curl
           command: |
-            apt-get install -y curl
+            sudo apt-get install -y curl
       - run:
           name: Run migrations
           command: |
@@ -223,7 +223,7 @@ jobs:
       - run:
           name: Install tar and gzip
           command: |
-            apt-get install -y tar gzip
+            sudo apt-get install -y tar gzip
       - run:
           name: Get backend url
           command: |
