--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,6 +247,38 @@ jobs:
           workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
       - destroy-environment:
           workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+  deploy-backend:
+    docker:
+      - image: python:3.9.16-alpine3.17
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "64:43:49:2e:32:13:ea:ca:f3:8c:eb:94:0a:47:b4:2b"
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update curl tar gzip ansible
+            pip install awscli
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            npm i
+            npm run build
+            cd ..
+            # Zip the directory
+            tar -C backend -czvf artifact.tar.gz .
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - revert-migrations:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+      - destroy-environment:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
 workflows:
   default:
     jobs:
@@ -271,3 +303,6 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
+      
