--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,8 +260,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update curl tar gzip ansible
-            pip install awscli
+            apk add --update curl tar gzip ansible npm
       - run:
           name: Deploy backend
           command: |
@@ -279,6 +278,49 @@ jobs:
           workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
       - destroy-environment:
           workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+  smoke-test:
+    docker:
+      - image: alpine:latest
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update curl
+      - run:
+          name: Get backend url
+          command: |
+            BACKEND_IP=$(aws cloudformation describe-stacks \
+              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query "Stacks[0].Outputs[0].OutputValue" \
+              --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+      - run:
+          name: Backend smoke test.
+          command: |
+            if curl -s ${API_URL}/api/status | grep "ok"
+            then
+              return 0
+            else
+              return 1
+            fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+              URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+              echo ${URL} 
+              if curl -s ${URL} | grep "Welcome"
+              then
+                return 1
+              else
+                return 0
+              fi
+      - revert-migrations:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+      - destroy-environment:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+
 workflows:
   default:
     jobs:
@@ -305,4 +347,5 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
