--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -2,7 +2,7 @@
   - name: Copy files
     become: true
     copy:
-      src: ~/backend/artifact.tar.gz
+      src: /backend/artifact.tar.gz
       dest: /home/ubuntu/artifact.tar.gz
   
   - name: Unarchive
