--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -261,6 +261,7 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update curl tar gzip ansible npm
+            pip install awscli
       - run:
           name: Deploy backend
           command: |
@@ -270,6 +271,7 @@ jobs:
             cd ..
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
+            ls
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
