--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -2,7 +2,7 @@
   - name: Copy files
     become: true
     copy:
-      src: /artifact.tar.gz
+      src: artifact.tar.gz
       dest: /home/ubuntu/artifact.tar.gz
   
   - name: Unarchive
