--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -284,13 +284,13 @@ jobs:
           workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
   smoke-test:
     docker:
-      - image: alpine:latest
+      - image: doctrine/nodejs-aws-cli:latest
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-            apk add --update curl
+            sudo apt-get install -y curl
       - run:
           name: Get backend url
           command: |
