--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = $(curl "https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/migration_<<parameters.workflow_id>>" -H "X-Api-Key: ${THISDB_API_KEY}")
+            $SUCCESS = $(curl "https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/migration_<<parameters.workflow_id>>" -H "X-Api-Key: ${THISDB_API_KEY}")
             if(( $SUCCESS==1 )); 
               then
               cd ~/project/backend
@@ -303,22 +303,18 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            if curl -s ${API_URL}/api/status | grep "ok"
+            if ! curl -s ${API_URL}/api/status | grep "ok"
             then
-              return 0
-            else
-              return 1
+              exit 1
             fi
       - run:
           name: Frontend smoke test.
           command: |
               URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
               echo ${URL} 
-              if curl -s ${URL} | grep "Welcome"
+              if ! curl -s ${URL} | grep "Welcome"
               then
-                return 1
-              else
-                return 0
+                exit 1
               fi
       - revert-migrations:
           workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
