--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            $SUCCESS = $(curl "https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/migration_<<parameters.workflow_id>>" -H "X-Api-Key: ${THISDB_API_KEY}")
+            SUCCESS = $(curl "https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/migration_<<parameters.workflow_id>>" -H "X-Api-Key: ${THISDB_API_KEY}")
             if(( $SUCCESS==1 )); 
               then
               cd ~/project/backend
@@ -318,8 +318,8 @@ jobs:
               fi
       - revert-migrations:
           workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
-      - destroy-environment:
-          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+      # - destroy-environment:
+      #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
   cloudfront-update:
     docker:
       - image: doctrine/nodejs-aws-cli:latest
