--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -316,8 +316,8 @@ jobs:
               then
                 exit 1
               fi
-      - revert-migrations:
-          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+      # - revert-migrations:
+      #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
       # - destroy-environment:
       #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
   cloudfront-update:
