--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,6 +258,8 @@ jobs:
             - "64:43:49:2e:32:13:ea:ca:f3:8c:eb:94:0a:47:b4:2b"
       - attach_workspace:
           at: ~/
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Install dependencies
           command: |
