--- a/backend/development.env
+++ b/backend/development.env
@@ -1,4 +1,4 @@
-NODE_ENV=local
+NODE_ENV=development
 VERSION=1
 TYPEORM_CONNECTION=postgres
 TYPEORM_MIGRATIONS_DIR=./src/migrations
@@ -6,8 +6,8 @@ TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts
 TYPEORM_MIGRATIONS=./src/migrations/*.ts
 
 # Things you can change if you wish...
-TYPEORM_HOST=localhost
-TYPEORM_PORT=5532
+TYPEORM_HOST=database-1.cf1zknzlmu15.ap-southeast-1.rds.amazonaws.com
+TYPEORM_PORT=5432
 TYPEORM_USERNAME=postgres
-TYPEORM_PASSWORD=password
-TYPEORM_DATABASE=glee
+TYPEORM_PASSWORD=mypassword
+TYPEORM_DATABASE=postgres
