--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -303,23 +303,22 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            if ! curl -s ${API_URL}/api/status | grep "ok"
-            then
-              exit 1
-            fi
+            curl -s ${API_URL}/api/status | grep "ok"
       - run:
           name: Frontend smoke test.
           command: |
               URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
               echo ${URL} 
-              if ! curl -s ${URL} | grep "Welcome"
+              if curl -s ${URL} | grep "Welcome"
               then
+                exit 0
+              else 
                 exit 1
               fi
-      # - revert-migrations:
-      #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
-      # - destroy-environment:
-      #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+      - revert-migrations:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+      - destroy-environment:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
   cloudfront-update:
     docker:
       - image: doctrine/nodejs-aws-cli:latest
