--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -303,7 +303,11 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            echo ${API_URL}            
+            BACKEND_IP=$(aws cloudformation describe-stacks \
+              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query "Stacks[0].Outputs[0].OutputValue" \
+              --output text)
+            export API_URL="http://${BACKEND_IP}:3030"          
             curl -s ${API_URL}/api/status | grep "ok"
       - run:
           name: Frontend smoke test.
