--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -314,12 +314,7 @@ jobs:
           command: |
               URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
               echo ${URL} 
-              if curl -s ${URL} | grep "Welcome"
-              then
-                exit 0
-              else 
-                exit 1
-              fi
+              curl -s ${URL} | grep "Welcome"
       - revert-migrations:
           workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
       - destroy-environment:
