--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -312,7 +312,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-              URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+              URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-ap-southeast-1.amazonaws.com/#/employees"            
               echo ${URL} 
               curl -s ${URL} | grep "Welcome"
       # - revert-migrations:
