--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,6 +301,12 @@ jobs:
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
       - run:
+          name: Frontend smoke test.
+          command: |
+              URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-ap-southeast-1.amazonaws.com/#/employees"            
+              echo ${URL} 
+              curl -s ${URL} | grep "Welcome"
+      - run:
           name: Backend smoke test.
           command: |
             BACKEND_IP=$(aws cloudformation describe-stacks \
@@ -308,18 +314,12 @@ jobs:
               --query "Stacks[0].Outputs[0].OutputValue" \
               --output text)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"        
+            echo ${API_URL}
             curl -s ${API_URL}/api/status | grep "ok"
-      - run:
-          name: Frontend smoke test.
-          command: |
-              URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-ap-southeast-1.amazonaws.com/#/employees"            
-              echo ${URL} 
-              curl -s ${URL} | grep "Welcome"
       # - revert-migrations:
       #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
-      # - destroy-environment:
-      #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+      - destroy-environment:
+          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
   cloudfront-update:
     docker:
       - image: doctrine/nodejs-aws-cli:latest
