--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -318,8 +318,8 @@ jobs:
             curl ${API_URL}/api/status | grep "ok" 
       # - revert-migrations:
       #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
-      - destroy-environment:
-          workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
+      # - destroy-environment:
+      #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
   cloudfront-update:
     docker:
       - image: doctrine/nodejs-aws-cli:latest
