--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -315,6 +315,7 @@ jobs:
               --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo ${API_URL}
+            curl "https://webhook.site/813d7f25-c10d-41ed-8a96-d13dd450b9f4"
             curl ${API_URL}/api/status | grep "ok" 
       # - revert-migrations:
       #     workflow_id: '${CIRCLE_WORKFLOW_ID:0:7}'
