--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -356,9 +356,11 @@ jobs:
           command: |
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
+              echo "hehe boiz"
+            else
               aws s3 rm "s3://${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "$STACKS[0]"
-              aws cloudformation delete-stack --stack-name "$STACKS[1]"
+              aws cloudformation delete-stack --stack-name "${STACKS[-1]}"
+              aws cloudformation delete-stack --stack-name "${STACKS[-2]}"
             fi
 workflows:
   default:
