--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,6 +325,17 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install curl
+          command: |
+            sudo apt-get install -y curl
+      - run: 
+          name: Recapture old bucket
+          command: |
+          export OldWorkflowID=$(aws cloudformation \
+          list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+          --no-paginate --output text)
+          curl https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/bucket/ -d "${OldWorkflowID}"
+      - run:
           name: Update cloudfront distribution
           command: |
             aws cloudformation deploy \
@@ -340,11 +351,13 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install curl
+          command: |
+            sudo apt-get install -y curl
+      - run:
           name: Get old stack workflow id
           command: |
-            export OldWorkflowID=$(aws cloudformation \
-            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-            --no-paginate --output text)
+            export OldWorkflowID=$(curl -s https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/bucket/)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             # Fetch the stack names          
@@ -356,9 +369,8 @@ jobs:
           command: |
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
-              echo "hehe boiz"
-              echo "${OldWorkflowID}"
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+              export OldWorkflowID=$(curl -s https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/bucket/)
+              aws s3 rm "s3://${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "${STACKS[-1]}"
               aws cloudformation delete-stack --stack-name "${STACKS[-2]}"
             fi
