--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -331,10 +331,10 @@ jobs:
       - run: 
           name: Recapture old bucket
           command: |
-          export OldWorkflowID=$(aws cloudformation \
-          list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-          --no-paginate --output text)
-          curl https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/bucket/ -d "${OldWorkflowID}"
+            OldWorkflowID=$(aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
+            curl https://kvdb.io/Jceh2agBH5U5R7u6oKMpjb/bucket/ -d "${OldWorkflowID}"
       - run:
           name: Update cloudfront distribution
           command: |
